breadcrumbs and fixed some spacing

--- a/public/css/bubbles.css
+++ b/public/css/bubbles.css
@@ -6,8 +6,7 @@ html, body{
 .content{
 	display:inline-block;
 	clear: both;
-	height:100%;
-	width:100%;
+	border-radius:50%;
 	padding-top: 125px;
 	padding-bottom: 100px;
 	padding-left: 50px;
@@ -66,7 +65,7 @@ html, body{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	width: 250px;
+	width: 200px;
 }
 
 .modifier{
@@ -151,4 +150,10 @@ html, body{
 
 a{
 	color:white;
+}
+
+.path-breadcrumbs{
+	padding: 5px;
+	border: 3px solid white;
+	border-radius: 10px;
 }
